--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -4,12 +4,14 @@ en:
       text_footer: "© 2018 By Phong - Huan."
     header:
       welcome: "Welcome to Framgia Education"
-      sign_in: "sign in"
+      link_log_in: "Sign in"
+      link_home: "Home"
       framgia_logo: "framgia logo"
   helpers:
     application_helper:
       title: "Framgia training system"
   static_pages:
     home:
+      framgia: framgia
       img-nav-1: "image nav 1"
       img-nav-2: "image nav 2"
