--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3,14 +3,22 @@ en:
     users:
       signup_success: "Create an account successfully"
       user_not_found: "User not found!"
+    sessions:
+      invalid_account: "Invalid email/password combination"
   layouts:
     footer:
       text_footer: "© 2018 By Phong - Huan."
     header:
-      welcome: "Welcome to Framgia Education"
+      framgia: "framgia"
       link_log_in: "Sign in"
       link_home: "Home"
       framgia_logo: "framgia logo"
+    users:
+      link_home: "Framgia Education"
+      link_account: "Account"
+      link_profile: "Profile"
+      link_settings: "Settings"
+      link_log_out: "Log out"
   helpers:
     application_helper:
       title: "Framgia training system"
@@ -33,3 +41,9 @@ en:
   error:
     one: "The form contains 1 error"
     other: "The form contains %{count} errors"
+  sessions:
+    new:
+      log_in: "Log in"
+      email: "Email"
+      password: "Password"
+      btn_log_in: "Log in now!"
