--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -140,6 +140,24 @@ en:
       tasks: "Tasks"
       btn_show_details: "Show details"
       btn_delete_subject: "Delete subject"
+      btn_add_member: "Add member"
+      btn_add_subject: "Add subject"
+    modal_add_subject:
+      btn_add_subject: "Add subject"
+      btn_close: "Close"
+    modal_add_member:
+      btn_close: "Close"
+      btn_add_member: "Add member"
+
+  common:
+    user_of_course:
+      show_details: "Show details"
+      delete_member: "Delete member"
+      cf_sure: "You sure?"
+    subject_of_course:
+      show_details: "Show details"
+      delete_subject: "Delete subject"
+      cf_sure: "You sure?"
   basic_trainee:
     users:
       show:
@@ -151,3 +169,6 @@ en:
     add_member_success: "User have been added"
     deleted_subject_success: "Subject have been deleted"
     deleted_user_success: "User have been deleted"
+    pls_choose_subject: "Please choose subject"
+    subject_not_found: "Subject not found"
+    add_subject_success: "Add subject successfully"
